--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         import { FFmpeg } from 'https://unpkg.com/@ffmpeg/ffmpeg@0.12.7/dist/esm/index.js';
         import { fetchFile, toBlobURL } from 'https://unpkg.com/@ffmpeg/util@0.12.1/dist/esm/index.js';
 
-        const ffmpeg = new FFmpeg();
+        const ffmpeg = new FFmpeg({
+            log: true
+        });
         const status = document.getElementById('status');
         const downloadBtn = document.getElementById('download-btn');
         const dropZone = document.getElementById('drop-zone');
