--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="card">
     <h1>音声変換 (M4A & OGG)</h1>
     <div id="drop-zone">ここに音声をドロップ</div>
-    <input type="file" id="file-input" style="display:none" accept="audio/*,video/*">
+    <input type="file" id="file-input" style="display:none" accept="audio/*">
     <div id="status">準備中...</div>
     <button id="download-btn">ZIPファイルを保存する</button>
 </div>
@@ -68,6 +68,15 @@
 
     async function process(file) {
         if (!ffmpeg.isLoaded()) return;
+        if (!file.type.startsWith('audio/')) {
+            status.innerHTML = "<span style='color:red'>エラー: 音声ファイル以外は処理できません。</span>";
+            return;
+        }
+        const maxSize = 100 * 1024 * 1024; // 100MB
+        if (file.size > maxSize) {
+            status.innerHTML = "<span style='color:red'>エラー: ファイルが大きすぎます(100MBまで)。</span>";
+            return;
+        }
         downloadBtn.style.display = 'none';
         status.innerText = "変換中...";
         const name = file.name.split('.').slice(0, -1).join('.');
